cabal-version:       >=1.10
name:                up-bank-api
version:             0.1.0.0
synopsis:            Servant Client API for Up Bank
description:         Servant Client API for Up Bank
-- license:
license-file:        LICENSE
author:              Leo Orpilla III
maintainer:          leoorpilla3@gmail.com
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  
  README.md
  CHANGELOG.md
source-repository   head
  type: git
  location: https://github.com/ldgrp/up-bank-hs.git

library
  exposed-modules:     Up
                     , Up.API
                     , Up.Model.Account
                     , Up.Model.Category
                     , Up.Model.MoneyObject
                     , Up.Model.Paginated
                     , Up.Model.Tag
                     , Up.Model.Token
                     , Up.Model.Transaction
  build-depends:       base >= 4.13 && < 4.15
                     , aeson
                     , aeson-casing
                     , aeson-pretty
                     , bytestring
                     , http-client
                     , http-client-tls
                     , http-types
                     , servant
                     , servant-client
                     , servant-client-core
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         
    -Wall 
    -Wcompat
    -Werror=incomplete-patterns
    -fwarn-tabs
    -fwarn-unused-imports
    -fwarn-missing-signatures
    -fwarn-name-shadowing
    -fwarn-incomplete-patterns

executable Demo
  main-is: Demo.hs
  build-depends:       base >= 4.13 && < 4.15
                     , aeson
                     , aeson-casing
                     , aeson-pretty
                     , bytestring
                     , http-client
                     , http-client-tls
                     , http-types
                     , servant
                     , servant-client
                     , servant-client-core
                     , text
                     , up-bank-api
  default-language:    Haskell2010
  hs-source-dirs:      src
  other-modules:       Up
                     , Up.API
                     , Up.Model.Account
                     , Up.Model.Category
                     , Up.Model.MoneyObject
                     , Up.Model.Paginated
                     , Up.Model.Tag
                     , Up.Model.Token
                     , Up.Model.Transaction
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-patterns
    -fwarn-tabs
    -fwarn-unused-imports
    -fwarn-missing-signatures
    -fwarn-name-shadowing
    -fwarn-incomplete-patterns

