cabal-version:       >=1.10
name:                up-bank-api
version:             0.1.0.0
synopsis:            Servant Client API for Up Bank
description:         Servant Client API for Up Bank
license:             MIT
license-file:        LICENSE
author:              Leo Orpilla III
maintainer:          leoorpilla3@gmail.com
copyright:           2020
category:            Web
build-type:          Simple
extra-source-files:
  README.md
  CHANGELOG.md
source-repository   head
  type: git
  location: https://github.com/ldgrp/uptop

library
  exposed-modules:     Up
                     , Up.API
                     , Up.Model.Account
                     , Up.Model.Category
                     , Up.Model.MoneyObject
                     , Up.Model.Paginated
                     , Up.Model.Tag
                     , Up.Model.Token
                     , Up.Model.Transaction
                     , Up.Model.Utility
  build-depends:       base >= 4.13 && < 4.20
                     , aeson
                     , aeson-casing
                     , aeson-pretty
                     , bytestring
                     , http-client
                     , http-client-tls
                     , http-types
                     , servant
                     , servant-client
                     , servant-client-core
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-patterns
    -fwarn-tabs
    -fwarn-unused-imports
    -fwarn-missing-signatures
    -fwarn-name-shadowing
    -fwarn-incomplete-patterns

executable demo
  main-is: Demo.hs
  build-depends:       base >= 4.13 && < 4.20
                     , aeson
                     , aeson-casing
                     , aeson-pretty
                     , bytestring
                     , http-client
                     , http-client-tls
                     , http-types
                     , servant
                     , servant-client
                     , servant-client-core
                     , text
  default-language:    Haskell2010
  hs-source-dirs:      src
  other-modules:       Up
                     , Up.API
                     , Up.Model.Account
                     , Up.Model.Category
                     , Up.Model.MoneyObject
                     , Up.Model.Paginated
                     , Up.Model.Tag
                     , Up.Model.Token
                     , Up.Model.Transaction
                     , Up.Model.Utility
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-patterns
    -fwarn-tabs
    -fwarn-unused-imports
    -fwarn-missing-signatures
    -fwarn-name-shadowing
    -fwarn-incomplete-patterns