cabal-version:       3.0
name:                up-bank-api
version:             0.2.0
synopsis:            Servant Client API for Up Bank
description:         Servant Client API for Up Bank
license:             MIT
license-file:        LICENSE
author:              Leo Orpilla III
maintainer:          leoorpilla3@gmail.com
copyright:           2020-2025
category:            Web
build-type:          Simple
extra-source-files:
  README.md
  CHANGELOG.md
source-repository   head
  type: git
  location: https://github.com/ldgrp/uptop

library
  exposed-modules:     Up
                     , Up.API
                     , Up.Model.Account
                     , Up.Model.Category
                     , Up.Model.MoneyObject
                     , Up.Model.Paginated
                     , Up.Model.Tag
                     , Up.Model.Token
                     , Up.Model.Transaction
                     , Up.Model.Utility
  build-depends:       base >= 4.16 && < 4.20
                     , aeson >= 2.2 && < 2.3
                     , aeson-casing >= 0.2 && < 0.3
                     , aeson-pretty >= 0.8.10 && < 0.9
                     , bytestring >= 0.11 && < 0.12
                     , http-client >= 0.7 && < 0.8
                     , http-client-tls >= 0.3.6 && < 0.4
                     , http-types >= 0.12.4 && < 0.13
                     , servant >= 0.20 && < 0.21
                     , servant-client >= 0.20 && < 0.21
                     , servant-client-core >= 0.20 && < 0.21
                     , text >= 2.0 && < 2.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-patterns
    -fwarn-tabs
    -fwarn-unused-imports
    -fwarn-missing-signatures
    -fwarn-name-shadowing
    -fwarn-incomplete-patterns

executable demo
  main-is: Demo.hs
  build-depends:       base >= 4.16 && < 4.20
                     , aeson >= 2.2 && < 2.3
                     , aeson-casing >= 0.2 && < 0.3
                     , aeson-pretty >= 0.8.10 && < 0.9
                     , bytestring >= 0.11 && < 0.12
                     , http-client >= 0.7 && < 0.8
                     , http-client-tls >= 0.3.6 && < 0.4
                     , http-types >= 0.12.4 && < 0.13
                     , servant >= 0.20 && < 0.21
                     , servant-client >= 0.20 && < 0.21
                     , servant-client-core >= 0.20 && < 0.21
                     , text >= 2.0 && < 2.1
  default-language:    Haskell2010
  hs-source-dirs:      src
  other-modules:       Up
                     , Up.API
                     , Up.Model.Account
                     , Up.Model.Category
                     , Up.Model.MoneyObject
                     , Up.Model.Paginated
                     , Up.Model.Tag
                     , Up.Model.Token
                     , Up.Model.Transaction
                     , Up.Model.Utility
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-patterns
    -fwarn-tabs
    -fwarn-unused-imports
    -fwarn-missing-signatures
    -fwarn-name-shadowing
    -fwarn-incomplete-patterns