cabal-version:       >=1.10
name:                up-top
version:             0.1.0.0
synopsis:            A terminal client for Up Bank
description:         A terminal client for Up Bank
license:             MIT
license-file:        LICENSE
author:              Leo Orpilla III
maintainer:          leoorpilla3@gmail.com
copyright:           2020
category:            Web
build-type:          Simple
extra-source-files:
  README.md
  CHANGELOG.md
source-repository   head
  type: git
  location: https://github.com/ldgrp/uptop

executable uptop
  main-is: Main.hs
  build-depends:       base >= 4.13 && < 4.20
                     , brick >= 2.0
                     , http-client
                     , http-client-tls
                     , http-types
                     , microlens-platform
                     , unordered-containers
                     , servant-client
                     , stm
                     , text
                     , time
                     , tuple
                     , vector
                     , vty
                     , vty-crossplatform
                     , up-bank-api
  default-language:    Haskell2010
  hs-source-dirs:      src
  other-modules:       App
                     , Auth
                     , Common
                     , Event
                     , Types
                     , UI
                     , UI.MainView
                     , UI.HelpView
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-patterns
    -fwarn-tabs
    -fwarn-unused-imports
    -fwarn-missing-signatures
    -fwarn-name-shadowing
    -fwarn-incomplete-patterns
    -threaded
