cabal-version:       3.12
name:                up-top
version:             0.2.0
synopsis:            A terminal client for Up Bank
description:         A terminal client for Up Bank
license:             MIT
license-file:        LICENSE
author:              Leo Orpilla III
maintainer:          leoorpilla3@gmail.com
copyright:           2020-2025
category:            Web
build-type:          Simple
extra-source-files:  
  README.md
  CHANGELOG.md
source-repository   head
  type: git
  location: https://github.com/ldgrp/uptop

executable uptop
  main-is: Main.hs
  build-depends:       base >= 4.16 && < 4.20
                     , brick >= 2.8 && < 2.9
                     , http-client >= 0.7 && < 0.8
                     , http-client-tls >= 0.3 && < 0.4
                     , http-types >= 0.12 && < 0.13
                     , microlens >= 0.4 && < 0.5
                     , microlens-th >= 0.4 && < 0.5
                     , microlens-mtl >= 0.2 && < 0.3
                     , unordered-containers >= 0.2 && < 0.3
                     , servant-client >= 0.20 && < 0.21
                     , stm >= 2.5 && < 2.6
                     , text >= 2.0 && < 2.1
                     , time >= 1.12 && < 1.13
                     , tuple >= 0.3 && < 0.4
                     , vector >= 0.13 && < 0.14
                     , vty >= 6.4 && < 6.5
                     , vty-crossplatform >= 0.4 && < 0.5
                     , up-bank-api >= 0.2 && < 0.3
  default-language:    Haskell2010
  hs-source-dirs:      src
  other-modules:       App
                     , Auth
                     , Common
                     , Event
                     , Types
                     , UI
                     , UI.MainView
                     , UI.HelpView
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-patterns
    -fwarn-tabs
    -fwarn-unused-imports
    -fwarn-missing-signatures
    -fwarn-name-shadowing
    -fwarn-incomplete-patterns
    -threaded
